Fixing scrollbar in modal

--- a/src/styles/layout/modal.less
+++ b/src/styles/layout/modal.less
@@ -46,6 +46,19 @@
       margin-bottom: 0;
     }
   }
+
+  .form-row-element:first-child {
+    padding-left: 0;
+  }
+
+  .form-row-element:last-child {
+    padding-right: 0;
+  }
+
+  .row {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 // Modal specific styles
